it's ready to go!

--- a/POSC 521 MPA Capstone/2025-26 Fall/521_Students.bib
+++ b/POSC 521 MPA Capstone/2025-26 Fall/521_Students.bib
@@ -209,12 +209,16 @@
   file = {/home/dadams/Zotero/storage/XIM8TME7/Gulick - 1937 - Notes on the Thoery of Organization.pdf}
 }
 
-@book{guy2004emotional,
-  title = {Emotional Labor, Empathy, and Compassion in Public Administration},
-  author = {Guy, Mary E. and Newman, Meredith A.},
-  year = {2004},
-  publisher = {M.E. Sharpe},
-  address = {Armonk, NY}
+@book{guy2008,
+  title = {Emotional {{Labor}}: {{Putting}} the {{Service}} in {{Public Service}}},
+  shorttitle = {Emotional {{Labor}}},
+  author = {Guy, Mary E. and Newman, Meredith A. and Mastracci, Sharon},
+  year = {2008},
+  publisher = {{Taylor and Francis}},
+  address = {Hoboken},
+  abstract = {Most public service jobs require interpersonal contact that is either face-to-face or voice-to-voice - relational work that goes beyond testable job skills but is essential for job completion. This unique book focuses on this emotional labor and what it takes to perform it.The authors weave a powerful narrative of stories from the trenches gleaned through interviews, focus groups, and survey data. They go beyond the veneer of service delivery to the real, live, person-to-person interactions that give meaning to public service.For anyone who has ever felt apathetic toward government work, the w},
+  isbn = {978-0-7656-2116-0},
+  langid = {english}
 }
 
 @article{GUY2012,
@@ -360,6 +364,18 @@
   keywords = {PUBLIC administration,VIGNETTES},
   note = {\url{https://login.lib-proxy.fullerton.edu/login?url=https://search.ebscohost.com/login.aspx?direct=true&db=buh&AN=155866504&site=ehost-live&scope=site}},
   file = {/home/dadams/Zotero/storage/HKPAGZL6/McCandless et al. - 2022 - A long road Patterns and prospects for social equity, diversity, and inclusion in public administra.pdf}
+}
+
+@book{mcghee2021,
+  title = {The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together},
+  shorttitle = {The Sum of Us},
+  author = {McGhee, Heather C.},
+  year = {2021},
+  publisher = {One World},
+  address = {New York},
+  isbn = {978-0-525-50956-1 978-0-525-50958-5},
+  langid = {english},
+  file = {/home/dadams/Zotero/storage/ISZS6LWS/McGhee - 2022 - The sum of us what racism costs everyone and how we can prosper together.pdf}
 }
 
 @article{MEIER2006a,
