--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -99,8 +99,9 @@ Public Administration Theory} % Course title
 \begin{document}
 
 
-\maketitle
 % ========== CSUF HEADER (OPTIONAL) ==========
+\maketitle
+
 \begin{center}
     \includegraphics[width=2.75in, alt={Cal State Fullerton wordmark}]{csuf_logo.png}
 \end{center}
@@ -143,7 +144,7 @@ This course will be conducted in a hybrid format, with both in-person and asynch
 
     \begin{center}
     \begin{table}[h]
-        \caption{Session Schedule}
+        \caption{\textbf{Session Schedule}}
         \label{tab:session-schedule}
         \centering
         \begin{tblr}{
@@ -158,7 +159,7 @@ This course will be conducted in a hybrid format, with both in-person and asynch
     \end{table}
     \end{center}
 
-	\subsection*{Course requisites:}
+	\subsection*{Course Requisites:}
 		\begin{itemize}
             \item POSC 509: Foundations of Public Administration
             \item POSC 523: Administrative Research and Analysis
@@ -167,20 +168,20 @@ This course will be conducted in a hybrid format, with both in-person and asynch
             \item POSC 572: Human Resources Management
 		\end{itemize}
 
-	\subsection*{Catalog description:} 
+	\subsection*{Catalog Description:} 
 		Concepts, models and ideologies of public administration within the larger political system. Course restricted to students in their final six units of graduate work.
 
-	\subsection*{Additional description:}
+	\subsection*{Additional Description:}
 		The capstone seminar in the Master of Public Administration program at Cal State Fullerton examines concepts, models, and ideologies of public administration within the larger political system.
 
 
 	\subsection*{Course Materials}
 	\subsubsection*{Required Texts}
     \begin{itemize}
-        \item \textbf{Denhardt and Denhardt}. \textit{The New Public Service: Serving, Not Steering}. 4th ed. Routledge, 2015.
-        \item \textbf{Lipsky, Michael}. \textit{Street-Level Bureaucracy: Dilemmas of the Individual in Public Services}. Russell Sage Foundation, 2010.
-        \item \textbf{Guy, Mary E., and Meredith A. Newman}. \textit{Emotional Labor, Empathy, and Compassion in Public Administration}. Armonk, NY: M.E. Sharpe, 2004.
-        \item \textbf{McGhee, Heather}. \textit{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together}. One World, 2021.
+        \item Denhardt, Janet V., and Robert B. Denhardt. 2015. \textit{The New Public Service: Serving, Not Steering}. 4th ed. Routledge.
+        \item Lipsky, Michael. 2010. \textit{Street-Level Bureaucracy: Dilemmas of the Individual in Public Services}. Russell Sage Foundation.
+        \item Guy, Mary E., Meredith A. Newman, and Sharon H. Mastracci. 2008. \textit{Emotional Labor: Putting the Service in Public Service}. New York: Routledge.
+        \item McGhee, Heather. 2021. \textit{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together}. New York: One World.
     \end{itemize}
 
 
@@ -199,12 +200,12 @@ This course will be conducted in a hybrid format, with both in-person and asynch
 
 \subsection*{Grading Scale and Weights}
 
-\noindent \textbf{Grading scale:}
+\noindent \textbf{Grading Scale:}
 
 The grading scale is shown in Table~\ref{tab:grading-scale}. Grades will be given based on the weights in Table~\ref{tab:grade-weights}.
 \begin{center}
 \begin{table}[h]
-  \caption{Grade scale}
+  \caption{\textbf{Grade scale}}
   \label{tab:grading-scale}
   \centering
   \begin{tblr}{
@@ -258,7 +259,7 @@ The due dates for the course requirements are as follows:
 
 \begin{center}
 \begin{table}[h]
-  \caption{Assignment weighting}
+  \caption{\textbf{Assignment weighting}}
   \label{tab:grade-weights}
   \centering
   \begin{tblr}{
@@ -281,15 +282,15 @@ The due dates for the course requirements are as follows:
 	\subsection*{Attendance and Participation policy:}
 Students are expected to attend all in-person sessions. If you are unable to attend a session, please notify the professor in advance. If you miss a session, you are responsible for obtaining the information and materials covered in the session. If you miss a session, you will not be able to participate in mandatory class activities. This may have an impact on your graded materials. 
 
-	\subsection*{Make-up and late submission policy:}
+	\subsection*{Make-up and Late Submission Policy:}
 		All assignments are due on the date specified in the course schedule. Late assignments will only be accepted if prior arrangements have been made with the professor. Students must submit all assignments on time and in the correct format. Failure to submit an assignment on time may result in a grade penalty.
 
-	\subsection*{Authentication of student work:}
-        Students may be required to submit their work to a plagiarism detection service. This may include submitting drafts and final versions of assignments. Students should be aware that their work may be checked for authenticity and originality. Cal State Fullerton uses Turnitin\copyright. 
-	\subsection*{Extra credit:}
+	\subsection*{Authentication of Student Work:}
+        Students may be required to submit their work to a plagiarism detection service. This may include submitting drafts and final versions of assignments. Students should be aware that their work may be checked for authenticity and originality. Cal State Fullerton uses Turnitin\copyright.
+	\subsection*{Extra Credit:}
 		Extra credit opportunities will not be offered in this course. All students will be graded based on the same criteria and standards.
 
-	\subsection*{Retention of student work:}
+	\subsection*{Retention of Student Work:}
 		Students are responsible for retaining copies of all assignments submitted in this course. Students should keep copies of all assignments until the end of the semester and verify that their assignments have been graded and returned before discarding them.
 
 \section{Detailed Course Requirements}
@@ -378,7 +379,7 @@ Each week includes the following components:
 In addition to regular class discussion, structured peer review workshops will occur during class in:
 \begin{itemize}
     \item \textbf{Week 2}: Focus on developing stronger analytical connections
-    \item \textbf{Week 6}: Emphasis on theory-practice integration
+    \item \textbf{Week 5}: Emphasis on theory-practice integration
     \item \textbf{Week 8}: Final comprehensive exam preparation and synthesis refinement
 \end{itemize}
 
@@ -423,7 +424,7 @@ In addition to regular class discussion, structured peer review workshops will o
         \item \textbf{Objective}: Demonstrate mastery of key themes by critically engaging with classical public administration theory, New Public Service, and New Public Management.
         \item \textbf{Requirements}:
         \begin{itemize}
-            \item Length: 1,620 words.
+            \item Length: 1,000 words.
             \item Address the provided exam question with clear argumentation and citations.
             \item Use APA or Chicago author-date citation style.
             \item Engage deeply with course readings.
@@ -470,7 +471,7 @@ Facilitator pairs will be evaluated on:
     \item \textbf{Professional Communication:} Maintains respectful, scholarly discourse while encouraging risk-taking in thinking and effectively shares facilitation responsibilities
 \end{itemize}
 
-\textbf{Note:} Facilitator assignments will be distributed at the beginning of the semester. The instructor will handle all peer review workshop activities during designated weeks (3, 6, 9).
+\textbf{Note:} Facilitator assignments will be distributed at the beginning of the semester. The instructor will handle all peer review workshop activities during designated weeks (3, 5, 8).
 
 \subsection*{4) MPA Comprehensive General Area Essay Exam}
 
@@ -482,7 +483,7 @@ Students will complete a comprehensive general area essay exam as part of the MP
 
 \subsubsection*{Assignment Overview}
 
-This capstone project allows students to deepen their understanding of their MPA concentration area by integrating theoretical frameworks with real-world challenges. Using \textbf{Heather McGhee's \textit{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together} (2021)} as a central text, students will explore how exclusionary policies and inequitable governance affect their concentration area, such as public finance, human resources, local government management, or public policy. The assignment is scaffolded into stages to guide students toward producing a polished, analytical final paper.
+This capstone project allows students to deepen their understanding of their MPA concentration area by integrating theoretical frameworks with real-world challenges. Using \textbf{Heather McGhee's \textit{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together} \citeyearpar{mcghee2021}} as a central text, students will explore how exclusionary policies and inequitable governance affect their concentration area, such as public finance, human resources, local government management, or public policy. The assignment is scaffolded into stages to guide students toward producing a polished, analytical final paper.
 
 \paragraph*{Objectives:}
 \begin{itemize}
@@ -762,7 +763,7 @@ It is the student's responsibility to read and understand the required and impor
         \end{itemize}
     \item \textbf{Due Monday (9/22)}: Annotated Bibliography
     \item \textbf{Due Tuesday (9/23)}: Rough Draft Synthesis Paper
-    \item \textbf{Tuesday (9/23)}: Class Discussion
+    \item \textbf{Tuesday (9/23)}: Class Discussion \& Peer Review Workshop
     \item \textbf{Due Friday (9/26)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
@@ -775,7 +776,7 @@ It is the student's responsibility to read and understand the required and impor
         \end{itemize}
     \item \textbf{Due Monday (9/29)}: Annotated Bibliography
     \item \textbf{Due Tuesday (9/30)}: Rough Draft Synthesis Paper
-    \item \textbf{Tuesday (9/30)}: Class Discussion \& Peer Review Workshop
+    \item \textbf{Tuesday (9/30)}: Class Discussion
     \item \textbf{Due Friday (10/3)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
@@ -817,7 +818,7 @@ It is the student's responsibility to read and understand the required and impor
     \item \textbf{In-person Session}: Class discussion and peer review workshop on assigned readings
     \item Readings:
         \begin{itemize}
-            \item \cite{guy2004emotional}, \emph{Emotional Labor, Empathy, and Compassion in Public Administration}
+            \item \cite{guy2008}, \emph{Emotional Labor: Putting the Service in Public Service}
         \end{itemize}
     \item \textbf{Due Monday (10/20)}: Annotated Bibliography
     \item \textbf{Due Tuesday (10/21)}: Rough Draft Synthesis Paper
